--- a/iglesia/wp-content/themes/iglesia/css/main.less
+++ b/iglesia/wp-content/themes/iglesia/css/main.less
@@ -1,7 +1,300 @@
 @import 'elements.less';
 
+
+@color_grey: #d4dad9;
+@color_darkgret: #959b9a;
+@color_dark: #262626;
+@color_yellow: #eedf9c;
+@color_purple: #804258;
+
+
 /* Your Custom code here */
 
-div.example{
-  color:#fff;
+.wrapper{
+  width:96%;
+  max-width:960px;
+  margin:0 auto;
+}
+/*
+Header Styles
+*/
+.top-header{
+  height: 110px;
+  background: #ffffff;
+  position: relative;
+
+  .top-navigation{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 90px;
+    background-color: @color_dark;
+    z-index: 99;
+
+    .headermenu{
+      line-height: 90px;
+      display: inline-block;
+
+      li{
+        position: relative;
+        display: inline-block;
+        float: left;
+        height: 90px;
+        color: #ffffff;
+        font-size: 14px;
+        font-family: Arial, Helvetica, sans-serif;
+        margin-right: 3px;
+
+        &:hover{
+          .sub-menu{
+            display: block;
+          }
+        }
+
+        .sub-menu{
+          background-color: #fff;
+          color: @color_darkgret;
+          width: 140px;
+          padding: 35px 25px;
+          border-top: 3px solid @color_yellow;
+          margin-top: -3px;
+          position: relative;
+          display: none;
+
+          &::before{
+            content:"";
+            position: absolute;
+            top: 0;
+            left: 50%;
+            margin-left: -3px;
+            margin-top: -7px;
+            display: inline-block;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 0 3.5px 4px 3.5px;
+            border-color: transparent transparent @color_yellow transparent;
+          }
+
+
+          li{
+            color: @color_darkgret;
+            font-size: 13px;
+            display: block;
+            height: 40px;
+            line-height: 40px;
+            float: none;
+            width: 100%;
+            border-bottom: 1px solid @color_grey;
+            margin: 0;
+
+            .sub-menu{
+              position: absolute;
+              left: 100%;
+              top: 0;
+              border-top: 0;
+              border-left: 2px solid #f7f7f7;
+
+              &::before{
+                display: none;
+              }
+            }
+
+            &:last-child{
+              border-bottom: 0;
+            }
+
+            a{
+              color: inherit;
+              height:auto;
+              padding: 0;
+              display: inline-block;
+              line-height: 40px;
+              .transition(all 300ms ease-in-out);
+
+              &:hover{
+                color: @color_purple;
+                text-decoration: underline;
+                .transition(all 300ms ease-in-out);
+              }
+            }
+
+          }
+
+
+        }
+
+        &.current_page_item{
+          a{
+            color: @color_yellow;
+          }
+        }
+
+        &::after{
+          position: absolute;
+          top:50%;
+          left: 100%;
+          margin-top: -3px;
+          content: "\f111";
+          font: normal normal normal 6px/1 FontAwesome;
+          color: rgba(255,255,255,0.1);
+          display: inline-block;
+        }
+
+        &:first-child{
+          a{
+            padding-left: 0;
+          }
+        }
+
+        &:last-child{
+          &::after{
+            display: none;
+          }
+        }
+
+        a{
+          color: inherit;
+          padding: 0 30px;
+          display: block;
+          height: 100%;
+          .transition(all 300ms ease-in-out);
+
+          &:hover{
+            color: @color_yellow;
+            .transition(all 300ms ease-in-out);
+          }
+        }
+      }
+
+    }
+
+    .donate-button{
+      float: right;
+      display: block;
+      height: 90px;
+
+      a{
+        height: 87px;
+        display: block;
+        color: @color_yellow;
+        font-size: 14px;
+        font-family: Arial, Helvetica, sans-serif;
+        line-height: 90px;
+        text-transform: uppercase;
+        border-bottom: 3px solid @color_yellow;
+        font-weight:600;
+
+      }
+    }
+  }
+
+  &::after{
+    content: '';
+    display: block;
+    width:100%;
+    height:5px;
+    background: url("img/bottom.png") repeat-x center center;
+    position: absolute;
+    top:100%;
+  }
+}
+.header-third{
+  width: 33.3%;
+  float: left;
+
+  &.search-section{
+    line-height: 110px;
+
+    .menu-icon{
+      display: inline-block;
+      float: left;
+
+      i{
+        cursor: pointer;
+        font-size: 20px;
+        color: @color_dark;
+        line-height: 110px;
+      }
+    }
+    .search-box{
+      display: inline-block;
+      float: left;
+      margin-left: 35px;
+
+      #searchform fieldset{
+        &::before{
+          content: "\f002";
+          font: normal normal normal 14px/1 FontAwesome;
+          display: inline-block;
+          color: @color_grey;
+          margin-right: 7px;
+        }
+      }
+
+      #searchsubmit{
+        display: none;
+      }
+
+      input.searchinput{
+        border: none;
+        color: @color_darkgret;
+        font-size: 12px;
+        font-style: italic;
+
+
+        &::-webkit-input-placeholder{
+          color: @color_grey;
+          font-size: 12px;
+          font-style: italic;
+        }
+        &::-moz-placeholder{
+          color: @color_grey;
+          font-size: 12px;
+          font-style: italic;
+        }
+        &:-ms-input-placeholder{
+          color: @color_grey;
+          font-size: 12px;
+          font-style: italic;
+        }
+        &:-moz-placeholder{
+          color: @color_grey;
+          font-size: 12px;
+          font-style: italic;
+        }
+      }
+    }
+  }
+  &.logo-section{
+    text-align: center;
+    line-height: 110px;
+    .transition(all 300ms ease-in-out);
+
+    &:hover{
+      .opacity(0.6);
+      .transition(all 300ms ease-in-out);
+    }
+  }
+  &.social-section{
+    text-align:right;
+    font-size:20px;
+    color:@color_grey;
+    line-height: 110px;
+
+    a{
+      color: inherit;
+      .transition(all 300ms ease-in-out);
+
+      &:hover{
+        color: @color_darkgret;
+        .transition(all 300ms ease-in-out);
+      }
+    }
+
+    i{
+      margin-left: 30px;
+    }
+  }
 }
